fixed button z index issue, no longer overlapping splash screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -134,10 +134,10 @@
 /* SPLASH SCREENS HERE */
 
 #wrongPage {
-    z-index: 0;
+    z-index: 1;
     background-color: red;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: none;
     position: absolute;
     align-items: center;
@@ -145,10 +145,10 @@
     flex-direction: column;
 }
 #rightPage{
-    z-index: 0;
+    z-index: 1;
     background-color: green;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: none;
     position: absolute;
     align-items: center;
@@ -156,10 +156,10 @@
     flex-direction: column;
 }
 #timeOut {
-    z-index: 0;
+    z-index: 1;
     background-color: orange;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: none;
     position: absolute;
     justify-content: center;    
@@ -167,10 +167,10 @@
     flex-direction: column;
 }
 #winnerScreen{
-    z-index: 0;
+    z-index: 1;
     background-color: hotpink;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: none;
     position: absolute;
     align-items: center;
@@ -183,7 +183,7 @@
 /* BACKGROUND */
 
 #introPage {
-    z-index: 1;
+    z-index: 0;
     display: flex;
     height: 100vh;
     align-items: flex-end;
